unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/WorkOrder_StatusUpdate__e.object-meta.xml
<CustomObject>
    <label>WorkOrder Status Update</label>
    <pluralLabel>WorkOrder Status Updates</pluralLabel>
</CustomObject>