unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>