unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <label>Resource Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>