unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/Resource_Truck__c.field-meta.xml
<CustomField>
    <fullName>Resource_Truck__c</fullName>
    <label>Resource Truck</label>
    <length>20</length>
    <type>Text</type>
</CustomField>