unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/SA_ScheduledStart__c.field-meta.xml
<CustomField>
    <fullName>SA_ScheduledStart__c</fullName>
    <label>SA ScheduledStart</label>
    <type>DateTime</type>
</CustomField>