unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/SourceSystem_Id__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem_Id__c</fullName>
    <label>SourceSystem Id</label>
    <length>22</length>
    <type>Text</type>
</CustomField>