unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/SourceSystem_OrgCode__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem_OrgCode__c</fullName>
    <label>SourceSystem OrgCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>