unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/WorkOrder_Status__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Status__c</fullName>
    <label>WorkOrder Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>