unpackaged/main/default/objects/WorkOrder_StatusUpdate__e/fields/WorkOrder_WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_WaitTime__c</fullName>
    <label>WorkOrder WaitTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>